--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
     <div class="branch-card">
       <h2>فرع المنشيه</h2>
-      <p>📍 العنوان: []</p>
+      <p>📍 العنوان: [المحلة الكبري - منشية السلام - شارع هاني دياب خلف شادر الصياد]</p>
       <div class="button-group">
         <a class="whatsapp-btn" href="https://wa.me/201070746305" target="_blank">راسل الفرع</a>
         <a class="location-btn" href="https://maps.app.goo.gl/GSjPDx39JiJd4M486" target="_blank">الموقع</a>
@@ -193,9 +193,9 @@
     </div>
     <div class="branch-card">
       <h2>فرع الترعه</h2>
-      <p>📍 العنوان: [اكتب العنوان هنا]</p>
+      <p>📍 العنوان: [المحلة الكبري - شارع الترعه الرئيسى - بجوار كرم لمواد البناء]</p>
       <div class="button-group">
-        <a class="whatsapp-btn" href="https://wa.me/PHONE3" target="_blank">راسل الفرع</a>
+        <a class="whatsapp-btn" href="https://wa.me/201070746303" target="_blank">راسل الفرع</a>
         <a class="location-btn" href="https://www.google.com/maps?q=الترعة+المحلة+الكبرى" target="_blank">الموقع</a>
       </div>
     </div>
@@ -205,7 +205,7 @@
     <h2>💬 الشكاوى والملاحظات</h2>
     <p>راسلنا على واتساب في حالة وجود أي مشكلة أو استفسار</p>
 	<br>
-    <a class="whatsapp-btn" href="https://wa.me/COMPLAINT_PHONE" target="_blank">واتساب الدعم</a>
+    <a class="whatsapp-btn" href="https://wa.me/201060883447" target="_blank">واتساب</a>
   </section>
 
   <footer>
