--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
       <p>📍 العنوان: [المحلة الكبري - منشية السلام - شارع هاني دياب خلف شادر الصياد]</p>
       <div class="button-group">
         <a class="whatsapp-btn" href="https://wa.me/201070746305" target="_blank">راسل الفرع</a>
+	      <a class="whatsapp-btn" href="./licns.txt" target="_blank">00/a>
         <a class="location-btn" href="https://maps.app.goo.gl/GSjPDx39JiJd4M486" target="_blank">الموقع</a>
       </div>
     </div>
