--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
       <p>📍 العنوان: [المحلة الكبري - منشية السلام - شارع هاني دياب خلف شادر الصياد]</p>
       <div class="button-group">
         <a class="whatsapp-btn" href="https://wa.me/201070746305" target="_blank">راسل الفرع</a>
-	      <a class="whatsapp-btn" href="./licns.txt" target="_blank">00/a>
+
+	      
         <a class="location-btn" href="https://maps.app.goo.gl/GSjPDx39JiJd4M486" target="_blank">الموقع</a>
       </div>
     </div>
@@ -207,6 +208,7 @@
     <p>راسلنا على واتساب في حالة وجود أي مشكلة أو استفسار</p>
 	<br>
     <a class="whatsapp-btn" href="https://wa.me/201060883447" target="_blank">واتساب</a>
+	    <a class="location-btn" href="./licns.txt" target="_blank">00/a>
   </section>
 
   <footer>
